refactor: change package from template to logback

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: "kotlin"
 apply plugin: "org.springframework.boot"
 
 springBoot {
-    mainClass = "org.vld.template.ApplicationKt"
+    mainClass = "org.vld.logback.ApplicationKt"
 }
 
 version = "0.1.0"
